Table nist {
  number string [pk]
  family string // [not null, unique]
  title string
  priority string
  baseline_impact object
  statement object
  supplemental_guidance object
  references object
  withdrawn object
  base_control string
  parent_control string [ref: > nist.number]
}

Table Controls {
  id string [pk]
  family string
  name string
  base_control boolean
  parent_control string [ref: > Controls.id]
  nist string [ref: > nist.number]
}

Table ControlDetails {
  id string [pk, ref: > Controls.id]
  name string
  focus_area string
  family string
  nist_functions string
  risk_desc string
  objective string
  fs_guidance string
  fs_params string
  nist_guidance string
  implementation string
  requirements object[]
}

Enum ControlType1 {
  "Preventative"
  "Detective"
  "Corrective"
}
Enum ControlType2 {
  "Administrative"
  "Technical"
  "Physical"
}
Enum ControlType3 {
  "Automated"
  "Manual, Improbably Automated"
  "Manual, Prospectively Automated"
}
Table controlRequirement {
  id string [pk]
  control_id string [ref: > ControlDetails.id]
  description string
  risk_rating string
  control_type_1 ControlType1
  control_type_2 ControlType2
  control_type_3 ControlType3
  ibm_public_cloud_scope string
  ibm_public_cloud_resp string
  developer_scope string
  developer_resp string
  operator_scope string
  operator_resp string
  consumer_scope string
  consumer_resp string
}

Table EXTERNAL_AutomationModule {
  id string [pk]
  name string
  description string
  alias string
  tags string[]
  versions automationModuleVersion[]
}
Table service {
  service_id string [pk, ref: > EXTERNAL_AutomationModule.name]
  fullname string
  ibm_catalog_id string
  fs_validated bool
}

Table ControlMapping {
  id string
  control_id string [pk, ref: > Controls.id]
  service_id string [pk, ref: > service.service_id]
  arch_id string [pk, ref: > Architectures.arch_id]
  control_subsections string [pk, note: 'IBM SSP control sub section(s).']
  compliant string
  configuration string
  evidence string
  scc_profile string [pk, ref: > profile.id]
  desc string
  comment string
}

Table Goal {
  goal_id string [pk]
  description string
  parameters string
  parameters_default string
  comments string
}

Table mappingGoals {
  goal_id  string [pk, ref: > Goal.goal_id]
  mapping_id string [pk, ref: > ControlMapping.id]
}

Table profile {
  id string [pk]
  name string
  description string
}

Table Architectures {
  arch_id string [pk]
  name string
  platform string
  short_desc string
  long_desc string
  public booleanf
  production_ready boolean
  yaml string
}

Table solution {
  id string [pk]
  name string
  short_desc string
  long_desc string
  readme string
}

Table SolutionArchitectures {
  arch_id string [pk, ref: > Architectures.arch_id]
  solution_id string [pk, ref: > solution.id]
}

Table user {
  email string
}

Enum userControlStatus  {
  "not_started"
  "started"
  "implemented"
  "complete"
}
Table userOnBoarding {
  control_id string [pk, ref: > Controls.id]
  user_id string [pk, ref: > user.email]
  status userControlStatus
}

Enum userRole  {
  "read-only"
  "owner"
}
Table userArchitectures {
  email string [pk, ref: > user.email]
  arch_id string [pk, ref: > Architectures.arch_id]
  // role userRole
}

Table userSolutions {
  email string [pk, ref: > user.email]
  solution_id string [pk, ref: > solution.id]
  // role userRole
}

Table Bom {
  service_id string [pk, ref: > service.service_id]
  arch_id string [pk, ref: > Architectures.arch_id]
  desc string
  yaml string
}

Table OnBoardingStage {
  id string [pk]
  label string
  secondary_label string
  description string
  position int
  content string
}